added .20; font size
Signed-off-by: bachy <git@g-u-i.net>

--- a/css/guibik.css
+++ b/css/guibik.css
@@ -6,6 +6,7 @@
 .14{font-size:14px;}
 .16{font-size:16px;}
 .18{font-size:18px;}
+.20{font-size:18px;}
 .24{font-size:24px;}
 .30{font-size:30px;}
 .36{font-size:36px;}
