--- a/less/guibik.less
+++ b/less/guibik.less
@@ -167,6 +167,17 @@ li{list-style: none inside url();}
 }
 .vertical-tabs-list .summary { font-size:11px; }
 
+.page-admin table, 
+.update tr.warning .version-recommended, 
+.update tr.error .version-recommended{
+	background-color: transparent;
+	border:0px solid transparent;
+	tr{
+		border:0px solid transparent;
+	}
+}
+
+
 .page-admin table tr.even{
   background: #EFEFEF;
 }
@@ -174,6 +185,16 @@ li{list-style: none inside url();}
 	&.even, &.odd{ 
 		td, h3 {background-color: transparent;} 
 		&:hover{  background: #D4EFEE;}
+		&.ok{
+			background-color: #d1f2a3;
+		}
+		&.warning{
+			background-color: #e9e2a6;
+		}
+		&.error{
+			background-color: #ffc4be;
+		}
+
 	}
 }
 
