--- a/less/font.less
+++ b/less/font.less
@@ -1,16 +1,14 @@
 
-body{font-size:16px; font-family: Arial, "MS Trebuchet", sans-serif;}
+.consolas{
+  font-family: "consolas", "inconsolata", Arial, "MS Trebuchet", sans-serif;  
+}
+
+
+body{ .consolas; font-size:16px; .500;}
 
 
 a{color: #007BC2; text-decoration: none;}
 
 
-h1{font-size:1.6em;}
-h2{font-size:1.5em;}
-h3{font-size:1.4em;}
-h4{font-size:1.3em;}
-h5{font-size:1.2em;}
-h6{font-size:1.1em;}
-
-input{font-family: Arial, "MS Trebuchet", sans-serif; font-size:0.8em;}
+input{ .consolas; font-size:0.8em; }
 
