--- a/less/misc.less
+++ b/less/misc.less
@@ -1,3 +1,19 @@
+
+#debug-grid{
+  &, *{position:absolute;}
+  border:1px solid #000;
+  z-index: 9999999;
+
+  .cells{
+    border:1px solid #444444;
+  }
+
+  .lines{
+    border:1px dashed #717171;
+  }
+}
+
+
 li, .item-list ul li{list-style: none inside url(); margin-left:0;}
 
 /** Messages. */
