--- a/css/styles.css
+++ b/css/styles.css
@@ -374,6 +374,7 @@ body {
   *display: inline;
   display: table-cell;
   vertical-align: middle;
+  padding: 1em;
 }
 .ie7 #stream-wrapper .thema h2.thema-title span.txt,
 .ie8 #stream-wrapper .thema h2.thema-title span.txt {
@@ -461,40 +462,81 @@ body {
   transition: all 5s linear;
   opacity: 0;
 }
-#stream-wrapper .thema .voisin.nature {
-  width: 340px;
-  height: 62.25px;
+#stream-wrapper .thema .voisin.atmosphere-audio {
+  height: 0;
 }
-#stream-wrapper .thema .voisin.danse-son {
-  width: 340px;
-  height: 62.25px;
+#stream-wrapper .thema .voisin.atmosphere-video {
+  width: 680px;
+  height: 498px;
+  background-color: #2f62ff;
 }
-#stream-wrapper .thema .voisin.lettrage-image {
+#stream-wrapper .thema .voisin.atmosphere-video.post-anime {
+  background-color: #d8d8d8;
+  opacity: 0.9;
+}
+#stream-wrapper .thema .voisin.atmosphere-image {
+  width: 680px;
+  height: 498px;
+}
+#stream-wrapper .thema .voisin.discursif {
+  width: 680px;
+  height: 498px;
+}
+#stream-wrapper .thema .voisin.contrib-txt {
+  width: 340px;
+  background-color: #ff2405;
+}
+#stream-wrapper .thema .voisin.contrib-txt.post-anime {
+  background-color: #d8d8d8;
+  opacity: 0.9;
+}
+#stream-wrapper .thema .voisin.contrib-txt .field-name-field-text {
+  padding: 1em;
+}
+#stream-wrapper .thema .voisin.contrib-video {
+  width: 680px;
+  height: 498px;
+  background-color: #2f62ff;
+}
+#stream-wrapper .thema .voisin.contrib-video.post-anime {
+  background-color: #d8d8d8;
+  opacity: 0.9;
+}
+#stream-wrapper .thema .voisin.contrib-son {
+  height: 0;
+}
+#stream-wrapper .thema .voisin.contrib-image {
   width: 680px;
   height: 498px;
 }
 /** Anime */
 .not-anime {
-  -webkit-transition: opacity 0s ease-out;
-  -moz-transition: opacity 0s ease-out;
-  -o-transition: opacity 0s ease-out;
-  transition: opacity 0s ease-out;
+  -webkit-transition: all 0s ease-out;
+  -moz-transition: all 0s ease-out;
+  -o-transition: all 0s ease-out;
+  transition: all 0s ease-out;
   visibility: hidden;
   opacity: 0;
 }
 .pre-anime {
-  -webkit-transition: opacity 2s ease-out;
-  -moz-transition: opacity 2s ease-out;
-  -o-transition: opacity 2s ease-out;
-  transition: opacity 2s ease-out;
+  -webkit-transition: all 2s ease-out;
+  -moz-transition: all 2s ease-out;
+  -o-transition: all 2s ease-out;
+  transition: all 2s ease-out;
   visibility: visible;
   opacity: 1;
 }
+.anime {
+  -webkit-transition: all 5s ease-out;
+  -moz-transition: all 5s ease-out;
+  -o-transition: all 5s ease-out;
+  transition: all 5s ease-out;
+}
 .post-anime {
-  -webkit-transition: opacity 10s linear;
-  -moz-transition: opacity 10s linear;
-  -o-transition: opacity 10s linear;
-  transition: opacity 10s linear;
+  -webkit-transition: all 12s linear;
+  -moz-transition: all 12s linear;
+  -o-transition: all 12s linear;
+  transition: all 12s linear;
   visibility: visible;
   opacity: 0.2;
 }
