voisin contrib texte padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -490,7 +490,7 @@ body {
   background-color: #d8d8d8;
   opacity: 0.9;
 }
-#stream-wrapper .thema .voisin.contrib-txt .field-name-field-text {
+#stream-wrapper .thema .voisin.contrib-txt .field-name-field-texte {
   padding: 1em;
 }
 #stream-wrapper .thema .voisin.contrib-video {
