--- a/less/styles.less
+++ b/less/styles.less
@@ -198,7 +198,7 @@ body{
           background-color:@postanime-grey;
           opacity:@postanime-opacity;
         }
-        .field-name-field-text{
+        .field-name-field-texte{
           .p(1em);
         }
       }
