--- a/less/styles.less
+++ b/less/styles.less
@@ -189,7 +189,7 @@ body{
         width:@cell_w*2; height:@cell_h*2;
       }
       &.discursif{
-        width:@cell_w*2; height:@cell_h*2;
+        height:0;
       }
       &.contrib-txt{
         width:@cell_w;// height:@cell_h*2;
