--- a/less/styles.less
+++ b/less/styles.less
@@ -214,7 +214,7 @@ body{
           opacity:@postanime-opacity;
         }
         .field-name-field-texte{
-          .p(1em);
+          .p(1em); .24;
         }
       }
       // &.contrib-video{
