voisin stay red on random mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -469,7 +469,7 @@ body {
 #stream-wrapper .thema .voisin.contrib-video {
   width: 680px;
   height: 498px;
-  background-color: #2f62ff;
+  background-color: #ff2405;
 }
 #stream-wrapper .thema .voisin.atmosphere-video.pre-anime .field-name-field-video,
 #stream-wrapper .thema .voisin.contrib-video.pre-anime .field-name-field-video {
