--- a/less/styles.less
+++ b/less/styles.less
@@ -179,7 +179,7 @@ body{
       }
       &.atmosphere-video, &.contrib-video{
         width:@cell_w*2; height:@cell_h*2;
-        background-color: @bleu;
+        background-color: @orange;
         &.pre-anime{
           .field-name-field-video{
             opacity:0;
